--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "waxpeer-api",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "license": "MIT",
   "description": "API Helper for waxpeer.com",
@@ -25,7 +25,8 @@
     "axios": "^0.19.2",
     "axios-rate-limit": "^1.2.1",
     "bignumber.js": "^9.0.0",
-    "ts-error": "^1.0.4"
+    "ts-error": "^1.0.4",
+    "tslib": "^1.11.0"
   },
   "devDependencies": {
     "@types/jest": "^25.1.3",
