--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "waxpeer-api",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "index.js",
   "license": "MIT",
   "description": "API Helper for waxpeer.com",
@@ -25,6 +25,7 @@
     "axios": "^0.19.2",
     "axios-rate-limit": "^1.2.1",
     "bignumber.js": "^9.0.0",
+    "dotenv": "^8.2.0",
     "ts-error": "^1.0.4",
     "tslib": "^1.11.0"
   },
